Disabled user highlights.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,9 @@
 /* 
   Note: The styles for this gradient grid background is heavily inspired by the creator of this amazing site (https://dub.sh) – all credits go to them! 
 */
-
+* {
+  user-select: none;
+}
 .main {
   width: 100vw;
   min-height: 100vh;
