--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,12 +17,13 @@ html{
 
 body {
   height: 100%;
+  overflow: scroll;
 }
 
 .main {
   /* width: 100vw;
   min-height: 100vh; */
-  width: 100%;
+  width: 100vw;
   min-height: 100%;
   position: fixed;
   display: flex;
