--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@ html{
 }
 
 body {
-  height: 100%;
+  max-height: 100%;
   overflow: scroll;
 }
 
@@ -89,6 +89,7 @@ body {
 
 .app {
   @apply relative z-10 flex justify-center items-center flex-col max-w-7xl mx-auto sm:px-16 px-6;
+  height: 100%;
 }
 
 .black_btn {
