--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,15 +16,13 @@ html{
 }
 
 body {
-  max-height: 100%;
-  overflow: scroll;
+  height: 100%;
 }
 
 .main {
-  /* width: 100vw;
-  min-height: 100vh; */
   width: 100vw;
-  min-height: 100%;
+  min-height: 100vh;
+  
   position: fixed;
   display: flex;
   justify-content: center;
@@ -88,8 +86,7 @@ body {
 /* Tailwind Styles */
 
 .app {
-  @apply relative z-10 flex justify-center items-center flex-col max-w-7xl mx-auto sm:px-16 px-6;
-  height: 100%;
+  @apply relative z-10 flex justify-center items-center flex-col max-w-7xl mx-auto max-h-[100%] overflow-y-scroll sm:px-16 px-6;
 }
 
 .black_btn {
