UI page height tweak.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,8 @@ body {
 
 .main {
   width: 100vw;
-  min-height: 100vh;
+  max-height: 100vh;
+  overflow-y: scroll;
   
   position: fixed;
   display: flex;
