--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,11 +87,11 @@
 }
 
 .black_btn {
-  @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter font-semibold flex items-center justify-center;
 }
 
 .outline_btn {
-  @apply rounded-full border border-black bg-transparent py-1.5 px-5 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full border border-black bg-transparent py-1.5 px-5 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter font-semibold flex items-center justify-center;
 }
 
 .head_text {
@@ -119,7 +119,7 @@
 }
 
 .copy_btn {
-  @apply w-9 h-9 rounded-full bg-gray-100 flex justify-center items-center cursor-pointer;
+  @apply w-9 h-9 rounded-full bg-gray-100 text-gray-900 flex justify-center items-center cursor-pointer;
 }
 
 .glassmorphism {
