--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,7 +87,7 @@
 }
 
 .black_btn {
-  @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter font-semibold flex items-center justify-center;
+  @apply rounded-full bg-black py-2 px-5 text-white transition-all hover:bg-orange-600 text-center text-sm leading-tight font-inter flex items-center justify-center;
 }
 
 .outline_btn {
